force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Date( Year(TCO_Lifecycle_Input__r.Start_Date__c) +  Year__c - 1,
Month(TCO_Lifecycle_Input__r.Start_Date__c),
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>