force-app/main/default/objects/NCMT_TCO_LCC__c/fields/TCO_Lifecycle_Input__c.field-meta.xml
<CustomField>
    <fullName>TCO_Lifecycle_Input__c</fullName>
    <label>TCO Lifecycle Input</label>
    <referenceTo>NCMT_TCO_Lifecycle_Input__c</referenceTo>
    <relationshipLabel>NCMT TCO LCCs</relationshipLabel>
    <relationshipName>NCMT_TCO_LCCs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>