force-app/main/default/objects/NCMT_TCO_LCC__c/fields/TI_CRR_Escalated_Discounted_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_CRR_Escalated_Discounted_Cost__c</fullName>
    <formula>Retrofit_Escalated_Discounted_Cost__c + Refresh_Escalated_Discount_Cost__c + Repair_Escalated_Discounted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI CRR Escalated &amp; Discounted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>