force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Operations_Maintenance_Cost__c +  Utilities_Cost__c +  Construction_Cost__c +  TI_CRR_Cost__c + Replacement_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>