force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Utilities_Cost__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Cost__c</fullName>
    <formula>Grid_Electricity_Cost__c + Ptbl_Water_Cost__c + Gas_Cost__c + Reclaim_Water_Cost__c + Oth_Heating_Cost__c + Sewer_Cost__c + Other_Cooling_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilities Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>