force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Utilities_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Escalated__c</fullName>
    <formula>Grid_Electricity_Escalated_Cost__c  +  Ptbl_Water_Escalated_Cost__c  +  Gas_Escalated_Cost__c  +  Reclaim_Water_Escalated_Cost__c  +  Oth_Heating_Escalated_Cost__c  +  Sewer_Escalated_Cost__c + Other_Cooling_Escalated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilities Escalated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>