force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Utilities_Escalated_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Escalated_Discounted__c</fullName>
    <formula>Grid_Electricity_Esc_Discounted_Cost__c   +  Ptbl_Water_Escalated_Discounted_Cost__c  + Gas_Escalated_Discounted_Cost__c  +  Reclaim_Water_Esc_Discounted_Cost__c  +  Oth_Heating_Escalated_Discounted_Cost__c  +  Sewer_Escalated_Discounted_Cost__c + Other_Cooling_Escalated_Discounted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilities Escalated &amp; Discounted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>