force-app/main/default/objects/NCMT_TCO_LCC__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Analysis year that drives Fiscal Year and refresh/retrofit calculations.</inlineHelpText>
    <label>Year</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>